TM-5252 Fixed layout issue with the control tabs on the architecture graph
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@7428 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/force.css
+++ b/web-app/css/force.css
@@ -594,6 +594,7 @@ div.graphPanel.openPanel {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	position: relative;
+	display: inline-block;
 }
 
 .graphContainer.fullscreen #mapReferenceId div.graphPanelTab:not(.activeTab) {
